--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 *{
   margin: 0;
 }
+body{
+  background-color:lightgray;
+  justify-content: space-between;
+}
+
+
+.app__header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.app__stats{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
