--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@ body{
   background-color:lightgray;
   justify-content: space-between;
 }
-
+.app__left{
+  flex: 0.9;
+}
+.app{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
 
 .app__header{
   display: flex;
@@ -17,4 +24,23 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.btn{
+  display: inline-flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.btn >button{
+  margin: 2.5px;
+  background-color: honeydew;
+  color: blue;
+  border-radius: 20px;
+  box-shadow: 2px;
+}
+
+
+@media (max-width: 900px){
+  .app{
+    flex-direction: column;
+  }
 }
