--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -1,6 +1,13 @@
 .infoBox{
     flex: 1;
 }
+.infoBox:hover{
+    cursor: pointer;
+}
+.infoBox:active{
+    padding: -20px;
+    border-bottom: solid 5px green;
+}
 .infoBox:not(:last-child){
     margin-right: 15px;
 }
@@ -12,7 +19,7 @@
 }
 .infoBox__total{
     color: blue!important;
-    font-weight: 700!important;
+    font-weight: 700 !important;
     font-size: 0.8rem!important;
     margin-top: 15px !important;
 }
